--- a/Data_scraping.ipynb
+++ b/Data_scraping.ipynb
@@ -991,6 +991,15 @@
     "top10_df = pd.DataFrame(top_10)\n",
     "print(top10_df.to_string(index=False))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "/html/body/div[2]/div/div/div/main/article/div/div/div[2]/div[3]/table/tbody/tr[1]/td[2]/i/b\n",
+    "\n",
+    "<b>Blinding Lights</b>"
+   ]
   }
  ],
  "metadata": {
