--- a/50cities.ipynb
+++ b/50cities.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "fa0ccab6-e2a3-464a-8292-f6b5ba143b18",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "id": "05676077-65f7-40b2-9e1a-a1543bb8205d",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "id": "22df716c-b985-41f8-bc7a-a030b1bd57f3",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "id": "8c47f25e-d608-4652-9839-0556d88c8933",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
        " 'Arlington']"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,19 +111,11 @@
     "citylistfinal = [re.sub(r'</?i>', '', city) for city in citylistfinal]\n",
     "citylistfinal"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45cd1e32-50d1-4a04-8a10-39845eaf7f2a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -137,7 +129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
