--- a/Chartmetric_API.ipynb
+++ b/Chartmetric_API.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,42 +106,6 @@
     "        print(\"Response:\", res.json())  # Debugging info\n",
     "        exit(1)\n",
     "    return res.json()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# EX WORKFLOW\n",
-    "access_token = get_access_token()\n",
-    "response = Get('/api/artist/206557', access_token)\n",
-    "pprint(response)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# access list from 50cities.ipynb\n",
-    "\n",
-    "import nbformat\n",
-    "from IPython import get_ipython\n",
-    "\n",
-    "# Load the notebook\n",
-    "with open('50cities.ipynb') as f:\n",
-    "    nb = nbformat.read(f, as_version=4)\n",
-    "\n",
-    "# Execute the notebook\n",
-    "ip = get_ipython()\n",
-    "for cell in nb.cells:\n",
-    "    if cell.cell_type == 'code':\n",
-    "        ip.run_cell(cell.source)\n",
-    "\n",
-    "top50 = citylistfinal # list of top 50 cities by population according to Wikipedia"
    ]
   },
   {
@@ -182,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +173,7 @@
        " 'iso3': 'USA'}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +242,7 @@
        " {'city_name': 'Louisville', 'city_id': 6920, 'population': 1011696}]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +427,7 @@
        "  {'name': 'Chappell Roan', 'sp_followers': 4157919}]}"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,10 +454,71 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict # found module from google search\n",
+    "\n",
+    "# Dict. where each artist's name is a key, and the number of cities in which the artist appears is the value.\n",
+    "artist_count = defaultdict(int) \n",
+    "\n",
+    "# Iterate through transformed_city_top10artist_data to count the number of cities in which each artist appears\n",
+    "for city in transformed_city_top10artist_data:\n",
+    "    for artist in city['top_artists']:\n",
+    "        artist_count[artist['name']] += 1\n",
+    "\n",
+    "# Sort in Descending Order\n",
+    "sorted_artists = sorted(artist_count.items(), key=lambda x: x[1], reverse=True)\n",
+    "# Get the top 10 artists\n",
+    "top_10_artists = [artist[0] for artist in sorted_artists[:10]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ttps://docs.python.org/3/library/pickle.html\n",
+    "# to access in Genre_By_State&Selenium.ipynb\n",
+    "\n",
+    "import pickle\n",
+    "\n",
+    "with open('top_10_artists.pkl', 'wb') as f:\n",
+    "    pickle.dump(top_10_artists, f)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### DEFUNCT CODE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# access list from 50cities.ipynb\n",
+    "\n",
+    "import nbformat\n",
+    "from IPython import get_ipython\n",
+    "\n",
+    "# Load the notebook\n",
+    "with open('50cities.ipynb') as f:\n",
+    "    nb = nbformat.read(f, as_version=4)\n",
+    "\n",
+    "# Execute the notebook\n",
+    "ip = get_ipython()\n",
+    "for cell in nb.cells:\n",
+    "    if cell.cell_type == 'code':\n",
+    "        ip.run_cell(cell.source)\n",
+    "\n",
+    "top50 = citylistfinal # list of top 50 cities by population according to Wikipedia"
    ]
   },
   {
