--- a/Genre_By_State&Selenium.ipynb
+++ b/Genre_By_State&Selenium.ipynb
@@ -790,30 +790,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Also want to Scrape: https://chartmasters.org/most-streamed-tracks-on-spotify/"
+    "### Also want to Scrape: https://chartmasters.org/most-streamed-tracks-on-spotify/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'Rank': '1', 'Streams': 'Blinding Lights'},\n",
-       " {'Rank': '2', 'Streams': 'Shape of You'},\n",
-       " {'Rank': '3', 'Streams': 'Someone You Loved'},\n",
-       " {'Rank': '4', 'Streams': 'As It Was'},\n",
-       " {'Rank': '5', 'Streams': 'Sunflower'},\n",
-       " {'Rank': '6', 'Streams': 'Starboy'},\n",
-       " {'Rank': '7', 'Streams': 'One Dance'},\n",
-       " {'Rank': '8', 'Streams': 'Sweater Weather'},\n",
-       " {'Rank': '9', 'Streams': 'Stay'},\n",
-       " {'Rank': '10', 'Streams': 'Believer'}]"
+       "[{'Rank': '1', 'Title': 'Blinding Lights'},\n",
+       " {'Rank': '2', 'Title': 'Shape of You'},\n",
+       " {'Rank': '3', 'Title': 'Someone You Loved'},\n",
+       " {'Rank': '4', 'Title': 'As It Was'},\n",
+       " {'Rank': '5', 'Title': 'Sunflower'},\n",
+       " {'Rank': '6', 'Title': 'Starboy'},\n",
+       " {'Rank': '7', 'Title': 'One Dance'},\n",
+       " {'Rank': '8', 'Title': 'Sweater Weather'},\n",
+       " {'Rank': '9', 'Title': 'Stay'},\n",
+       " {'Rank': '10', 'Title': 'Believer'}]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +845,7 @@
     "            cols = row.find_all('td')\n",
     "            rank = cols[1].text.strip()\n",
     "            title = cols[2].text.strip()\n",
-    "            top_10_songs.append({'Rank': rank, 'Streams': title})\n",
+    "            top_10_songs.append({'Rank': rank, 'Title': title})\n",
     "    \n",
     "    return top_10_songs\n",
     "\n",
@@ -858,16 +858,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Theoretical With Selenium | Require a Web Driver"
+    "### Cont. Selenium | Require a Web Driver"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import time\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.chrome.service import Service\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
@@ -878,12 +877,13 @@
     "from selenium.webdriver.common.keys import Keys\n",
     "from selenium.webdriver.support import expected_conditions as EC\n",
     "\n",
-    "from bs4 import BeautifulSoup"
+    "from bs4 import BeautifulSoup\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +930,8 @@
     "    )\n",
     "    \n",
     "    search_input.send_keys(artist_name)\n",
-    "    search_input.send_keys(Keys.RETURN)\n",
+    "    # search_input.send_keys(Keys.RETURN) ~ pressing return key causes different formatting \n",
+    "    \n",
     "    time.sleep(5)  # Wait for the search results to load\n",
     "    \n",
     "    # Get the page source and parse it with BeautifulSoup\n",
@@ -945,12 +946,95 @@
     "        for row in rows:\n",
     "            cols = row.find_all('td')\n",
     "            rank = cols[0].text.strip()\n",
-    "            title = cols[1].text.strip()\n",
+    "            \n",
+    "            # Extract only the bolded text for the song title\n",
+    "            title = cols[1].find('b').text.strip() if cols[1].find('b') else cols[1].text.strip()\n",
     "            streams = cols[2].text.strip()\n",
+    "            \n",
     "            top_10_songs.append({'Rank': rank, 'Title': title, 'Streams': streams})\n",
+    "\n",
     "    \n",
     "    driver.quit()\n",
     "    return top_10_songs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ran into Issue with the ChromeDriverManager\n",
+    "# Ran into Issue with Javascript not loading\n",
+    "# Ran into Issue with the search_input not being found\n",
+    "# Ran into issue with Text for 'Title' key\n",
+    "\n",
+    "# EX:\n",
+    "artist_name = \"Lil Wayne\"\n",
+    "top_10 = dynamic_top10(artist_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'Rank': '1', 'Title': \"I'm the One\", 'Streams': '1,295,402,255'},\n",
+       " {'Rank': '2', 'Title': 'Sucker For Pain', 'Streams': '1,182,483,591'},\n",
+       " {'Rank': '3', 'Title': 'Love Me', 'Streams': '911,167,799'},\n",
+       " {'Rank': '4', 'Title': 'Down', 'Streams': '783,464,098'},\n",
+       " {'Rank': '5', 'Title': 'Forever', 'Streams': '638,299,492'},\n",
+       " {'Rank': '6', 'Title': 'Loyal', 'Streams': '608,000,200'},\n",
+       " {'Rank': '7', 'Title': 'A Milli', 'Streams': '605,886,979'},\n",
+       " {'Rank': '8', 'Title': 'The Motto', 'Streams': '585,233,304'},\n",
+       " {'Rank': '9', 'Title': 'Lollipop', 'Streams': '581,375,940'},\n",
+       " {'Rank': '10', 'Title': 'Only', 'Streams': '580,817,938'}]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Lil Wayne',\n",
+       " 'Future',\n",
+       " 'Tyler, The Creator',\n",
+       " 'Drake',\n",
+       " 'Kendrick Lamar',\n",
+       " 'Kanye West',\n",
+       " 'Metro Boomin',\n",
+       " '21 Savage',\n",
+       " 'Morgan Wallen',\n",
+       " 'GloRilla']"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open('top_10_artists.pkl', 'rb') as f: # serialized format\n",
+    "    top_10_artists = pickle.load(f)\n",
+    "    \n",
+    "top_10_artists"
    ]
   },
   {
@@ -959,46 +1043,94 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Example Usage\n",
-    "artist_name = \"Taylor Swift\"\n",
-    "top_10 = dynamic_top10(artist_name)"
+    "artists_top_10_songs = []\n",
+    "\n",
+    "# Loop through each artist and call the dynamic_top10 function\n",
+    "for artist in top_10_artists:\n",
+    "    top_10_songs = dynamic_top10(artist)\n",
+    "    artists_top_10_songs.append({artist: top_10_songs})\n",
+    "    \n",
+    "# list index our of range error occurs since the site does not have GloRilla as entries\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Rank                                         Title       Streams\n",
-      "   1                      Cruel SummerTaylor Swift 2,639,074,578\n",
-      "   2                       Blank SpaceTaylor Swift 1,966,128,585\n",
-      "   3 I Don’t Wanna Live ForeverZayn & Taylor Swift 1,772,628,452\n",
-      "   4                         Anti-HeroTaylor Swift 1,724,887,375\n",
-      "   5                             LoverTaylor Swift 1,616,412,364\n",
-      "   6                      Shake It OffTaylor Swift 1,527,367,860\n",
-      "   7                          CardiganTaylor Swift 1,498,834,795\n",
-      "   8                            AugustTaylor Swift 1,323,023,474\n",
-      "   9                             StyleTaylor Swift 1,313,399,952\n",
-      "  10                    Don’t Blame MeTaylor Swift 1,277,729,173\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "top10_df = pd.DataFrame(top_10)\n",
-    "print(top10_df.to_string(index=False))"
+    "artists_top_10_songs # top 9 artists are returned"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "# FILE NAME\n",
+    "text_file = 'top10songs_fortop9artists_byoccurenceincities.txt'\n",
+    "\n",
+    "# Write in JSON format\n",
+    "with open(text_file, 'w', encoding='utf-8') as file:\n",
+    "        json.dump( artists_top_10_songs , file, indent=4)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "/html/body/div[2]/div/div/div/main/article/div/div/div[2]/div[3]/table/tbody/tr[1]/td[2]/i/b\n",
+    "#### DEBUGGING SELENIUM\n",
     "\n",
-    "<b>Blinding Lights</b>"
+    "~Identification of Formatting Change  \n",
+    "~Identifcation of Bold Tags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<tr class=\"odd wdt-responsive-row-action\"><td class=\"expand numdata integer rankings column-rank\">1</td><td class=\"column-song\"><i><b>I'm the One</b></i><br/><a class=\"styledLink\" href=\"https://chartmasters.org/spotify-streaming-numbers-tool/?artist_name=&amp;rt=tbmsttrck&amp;artist_id=0QHgL1lAIqAw0HtD7YldmP\">DJ Khaled ft. Justin Bieber, Quavo, Chance The Rapper &amp; Lil Wayne</a> <a href=\"https://chartmasters.org/edit-track/?track_id=3DXncPQOG4VBw3QHh3S817\"><img height=\"11\" src=\"https://chartmasters.org/wp-content/uploads/2023/09/Edit-pen.jpg\" width=\"9\"/></a></td><td class=\"numdata integer numbersMain column-playcount sorting_1\">1,295,402,255</td></tr>, <tr class=\"even wdt-responsive-row-action\"><td class=\"expand numdata integer rankings column-rank\">2</td><td class=\"column-song\"><i><b>Sucker For Pain</b></i><br/><a class=\"styledLink\" href=\"https://chartmasters.org/spotify-streaming-numbers-tool/?artist_name=&amp;rt=tbmsttrck&amp;artist_id=55Aa2cqylxrFIXC767Z865\">Lil Wayne, Wiz Khalifa, Imagine Dragons, Logic &amp; Ty Dolla Sign ft. X Ambassadors</a> <a href=\"https://chartmasters.org/edit-track/?track_id=3RpufFBpn0bfpG1IhK0cUw\"><img height=\"11\" src=\"https://chartmasters.org/wp-content/uploads/2023/09/Edit-pen.jpg\" width=\"9\"/></a></td><td class=\"numdata integer numbersMain column-playcount sorting_1\">1,182,483,591</td></tr>, <tr class=\"odd wdt-responsive-row-action\"><td class=\"expand numdata integer rankings column-rank\">3</td><td class=\"column-song\"><i><b>Love Me</b></i><br/><a class=\"styledLink\" href=\"https://chartmasters.org/spotify-streaming-numbers-tool/?artist_name=&amp;rt=tbmsttrck&amp;artist_id=55Aa2cqylxrFIXC767Z865\">Lil Wayne ft. Drake &amp; Future</a> <a href=\"https://chartmasters.org/edit-track/?track_id=2XHzzp1j4IfTNp1FTn7YFg\"><img height=\"11\" src=\"https://chartmasters.org/wp-content/uploads/2023/09/Edit-pen.jpg\" width=\"9\"/></a></td><td class=\"numdata integer numbersMain column-playcount sorting_1\">911,167,799</td></tr>, <tr class=\"even wdt-responsive-row-action\"><td class=\"expand numdata integer rankings column-rank\">4</td><td class=\"column-song\"><i><b>Down</b></i><br/><a class=\"styledLink\" href=\"https://chartmasters.org/spotify-streaming-numbers-tool/?artist_name=&amp;rt=tbmsttrck&amp;artist_id=4pADjHPWyrlAF0FA7joK2H\">Jay Sean ft. Lil Wayne</a> <a href=\"https://chartmasters.org/edit-track/?track_id=6cmm1LMvZdB5zsCwX5BjqE\"><img height=\"11\" src=\"https://chartmasters.org/wp-content/uploads/2023/09/Edit-pen.jpg\" width=\"9\"/></a></td><td class=\"numdata integer numbersMain column-playcount sorting_1\">783,464,098</td></tr>, <tr class=\"odd wdt-responsive-row-action\"><td class=\"expand numdata integer rankings column-rank\">5</td><td class=\"column-song\"><i><b>Forever</b></i><br/><a class=\"styledLink\" href=\"https://chartmasters.org/spotify-streaming-numbers-tool/?artist_name=&amp;rt=tbmsttrck&amp;artist_id=3TVXtAsR1Inumwj472S9r4\">Drake, Kanye West, Lil Wayne &amp; Eminem</a> <a href=\"https://chartmasters.org/edit-track/?track_id=6HSqyfGnsHYw9MmIpa9zlZ\"><img height=\"11\" src=\"https://chartmasters.org/wp-content/uploads/2023/09/Edit-pen.jpg\" width=\"9\"/></a></td><td class=\"numdata integer numbersMain column-playcount sorting_1\">638,299,492</td></tr>, <tr class=\"even wdt-responsive-row-action\"><td class=\"expand numdata integer rankings column-rank\">6</td><td class=\"column-song\"><i><b>Loyal</b></i><br/><a class=\"styledLink\" href=\"https://chartmasters.org/spotify-streaming-numbers-tool/?artist_name=&amp;rt=tbmsttrck&amp;artist_id=7bXgB6jMjp9ATFy66eO08Z\">Chris Brown ft. Lil Wayne &amp; Tyga</a> <a href=\"https://chartmasters.org/edit-track/?track_id=5BrTUo0xP1wKXLJWUaGFtk\"><img height=\"11\" src=\"https://chartmasters.org/wp-content/uploads/2023/09/Edit-pen.jpg\" width=\"9\"/></a></td><td class=\"numdata integer numbersMain column-playcount sorting_1\">608,000,200</td></tr>, <tr class=\"odd wdt-responsive-row-action\"><td class=\"expand numdata integer rankings column-rank\">7</td><td class=\"column-song\"><i><b>A Milli</b></i><br/><a class=\"styledLink\" href=\"https://chartmasters.org/spotify-streaming-numbers-tool/?artist_name=&amp;rt=tbmsttrck&amp;artist_id=55Aa2cqylxrFIXC767Z865\">Lil Wayne</a> <a href=\"https://chartmasters.org/edit-track/?track_id=6ScJMrlpiLfZUGtWp4QIVt\"><img height=\"11\" src=\"https://chartmasters.org/wp-content/uploads/2023/09/Edit-pen.jpg\" width=\"9\"/></a></td><td class=\"numdata integer numbersMain column-playcount sorting_1\">605,886,979</td></tr>, <tr class=\"even wdt-responsive-row-action\"><td class=\"expand numdata integer rankings column-rank\">8</td><td class=\"column-song\"><i><b>The Motto</b></i><br/><a class=\"styledLink\" href=\"https://chartmasters.org/spotify-streaming-numbers-tool/?artist_name=&amp;rt=tbmsttrck&amp;artist_id=3TVXtAsR1Inumwj472S9r4\">Drake ft. Lil Wayne</a> <a href=\"https://chartmasters.org/edit-track/?track_id=4Kz4RdRCceaA9VgTqBhBfa\"><img height=\"11\" src=\"https://chartmasters.org/wp-content/uploads/2023/09/Edit-pen.jpg\" width=\"9\"/></a></td><td class=\"numdata integer numbersMain column-playcount sorting_1\">585,233,304</td></tr>, <tr class=\"odd wdt-responsive-row-action\"><td class=\"expand numdata integer rankings column-rank\">9</td><td class=\"column-song\"><i><b>Lollipop</b></i><br/><a class=\"styledLink\" href=\"https://chartmasters.org/spotify-streaming-numbers-tool/?artist_name=&amp;rt=tbmsttrck&amp;artist_id=55Aa2cqylxrFIXC767Z865\">Lil Wayne ft. Static Major</a> <a href=\"https://chartmasters.org/edit-track/?track_id=4P7VFiaZb3xrXoqGwZXC3J\"><img height=\"11\" src=\"https://chartmasters.org/wp-content/uploads/2023/09/Edit-pen.jpg\" width=\"9\"/></a></td><td class=\"numdata integer numbersMain column-playcount sorting_1\">581,375,940</td></tr>, <tr class=\"even wdt-responsive-row-action\"><td class=\"expand numdata integer rankings column-rank\">10</td><td class=\"column-song\"><i><b>Only</b></i><br/><a class=\"styledLink\" href=\"https://chartmasters.org/spotify-streaming-numbers-tool/?artist_name=&amp;rt=tbmsttrck&amp;artist_id=0hCNtLu0JehylgoiP8L4Gh\">Nicki Minaj ft. Drake, Lil Wayne &amp; Chris Brown</a> <a href=\"https://chartmasters.org/edit-track/?track_id=5pekaGq0N6VkDiTZJgK18A\"><img height=\"11\" src=\"https://chartmasters.org/wp-content/uploads/2023/09/Edit-pen.jpg\" width=\"9\"/></a></td><td class=\"numdata integer numbersMain column-playcount sorting_1\">580,817,938</td></tr>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()))\n",
+    "\n",
+    "# Open the URL\n",
+    "url = \"https://chartmasters.org/most-streamed-tracks-on-spotify/\"\n",
+    "driver.get(url)\n",
+    "time.sleep(5)  # Allow page to fully load\n",
+    "\n",
+    "# Find the search input and enter the artist's name\n",
+    "search_input = WebDriverWait(driver, 10).until(\n",
+    "    EC.presence_of_element_located((By.CSS_SELECTOR, 'input[placeholder=\"Artist\"]'))\n",
+    ")\n",
+    "artist_name = \"Lil Wayne\"\n",
+    "search_input.send_keys(artist_name)\n",
+    "# search_input.send_keys(Keys.RETURN)\n",
+    "time.sleep(5)  # Wait for the search results to load\n",
+    "\n",
+    "# Get the page source and parse it with BeautifulSoup\n",
+    "page_source = driver.page_source\n",
+    "soup = BeautifulSoup(page_source, 'html.parser')\n",
+    "\n",
+    "# Scrape the top 10 songs\n",
+    "table = soup.find('table')  # Adjust this selector based on the actual HTML structure\n",
+    "\n",
+    "if table:\n",
+    "    rows = table.find_all('tr')[1:11]  # Skip the header row and get the top 10 rows\n",
+    "\n",
+    "print(rows)\n",
+    "\n",
+    "driver.quit()"
    ]
   }
  ],
