--- a/Chartmetric_API.ipynb
+++ b/Chartmetric_API.ipynb
@@ -134,14 +134,17 @@
     "https://api.chartmetric.com/api/city/:id/:source/top-tracks\n",
     "\n",
     "__Spotify data for top 50 cities available prior to Aug 12, 2024__  \n",
-    "https://api.chartmetric.com/api/artist/:id/where-people-listen"
+    "https://api.chartmetric.com/api/artist/:id/where-people-listen\n",
+    "\n",
+    "__Search Functionalities__  \n",
+    "https://api.chartmetric.com/apidoc/#api-Search-SearchCity"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Using https://api.chartmetric.com/api/charts/shazam/:country_code/cities Endpoint"
+    "#### Using: https://api.chartmetric.com/api/cities Endpoint"
    ]
   },
   {
@@ -259,6 +262,25 @@
     "    for city in top_50_cities\n",
     "]\n",
     "top_50_cities_filtered"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For Use in CityDemographics\n",
+    "import pickle\n",
+    "\n",
+    "top_50_cities_provinces = [\n",
+    "    {'city_name': city['city_name'], 'state': city['province'], 'population': city['population']}\n",
+    "    for city in top_50_cities\n",
+    "]\n",
+    "top_50_cities_provinces[1] # Example info for  Los Angeles\n",
+    "\n",
+    "with open('top_50_cities_provinces.pkl', 'wb') as file:\n",
+    "    pickle.dump(top_50_cities_provinces, file)"
    ]
   },
   {
