--- a/Genre_By_State&Selenium.ipynb
+++ b/Genre_By_State&Selenium.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Data Scraping: https://grizzlyrose.com/most-popular-music-genre-by-state/\n",
+    "### Data Scraping and Selenium (Max Vo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Data Scraping: https://grizzlyrose.com/most-popular-music-genre-by-state/\n",
     "\n",
     "* Related Pages:\n",
     "* https://wisevoter.com/report/favorite-music-genre-by-state/\n",
@@ -15,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -66,16 +73,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Element html at 0x1763fc0f6a0>"
+       "<Element html at 0x257aefd5bc0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +155,7 @@
        " 'Wyoming']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,169 +167,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[' Country',\n",
-       " ' Kevin Gates',\n",
-       " 'Alabama',\n",
-       " ' Country',\n",
-       " ' Eminem',\n",
-       " 'Portugal. The Man',\n",
-       " 'Metal',\n",
-       " ' Drake',\n",
-       " 'Alice Cooper',\n",
-       " ' Country',\n",
-       " ' Kevin Gates',\n",
-       " 'Evanescence',\n",
-       " ' Pop',\n",
-       " ' Drake',\n",
-       " 'The Grateful Dead',\n",
-       " ' Indie',\n",
-       " ' Drake',\n",
-       " 'OneRepublic',\n",
-       " ' Metal',\n",
-       " ' Drake',\n",
-       " 'The Carpenters',\n",
-       " ' Classic Rock',\n",
-       " ' Drake',\n",
-       " 'George Thorogood and the Destroyers',\n",
-       " ' Alternative',\n",
-       " 'Drake',\n",
-       " 'Tom Petty and the Heartbreakers',\n",
-       " ' Classic Rock',\n",
-       " ' Future',\n",
-       " 'OutKast',\n",
-       " ' Rhythm and Blue',\n",
-       " ' Bruno Mars',\n",
-       " 'Pepper',\n",
-       " ' Country',\n",
-       " ' Eminem',\n",
-       " 'Built to Spill',\n",
-       " ' Classic Rock',\n",
-       " ' Drake',\n",
-       " 'Earth, Wind & Fire',\n",
-       " ' Classic Rock',\n",
-       " ' Drake',\n",
-       " 'Jackson 5',\n",
-       " ' Indie',\n",
-       " ' Drake',\n",
-       " 'Slipknot',\n",
-       " ' Metal',\n",
-       " ' Drake',\n",
-       " 'Kansas',\n",
-       " ' Classic Rock',\n",
-       " ' Kevin Gates',\n",
-       " 'My Morning Jacket',\n",
-       " ' Classic Rock',\n",
-       " ' Kevin Gates',\n",
-       " 'The Neville Brothers',\n",
-       " ' Alternative',\n",
-       " ' Eminem',\n",
-       " 'Rustic Overtones',\n",
-       " ' Indie',\n",
-       " ' Drake',\n",
-       " 'The Orioles',\n",
-       " ' Indie',\n",
-       " ' Drake',\n",
-       " 'Aerosmith',\n",
-       " ' Classic Rock',\n",
-       " ' Drake',\n",
-       " 'The Temptations',\n",
-       " ' Indie',\n",
-       " ' Drake',\n",
-       " 'Prince and the Revolution',\n",
-       " ' Classic Rock',\n",
-       " ' Kevin Gates',\n",
-       " '3 Doors Down',\n",
-       " ' Classic Rock',\n",
-       " ' Drake',\n",
-       " 'Ike & Tina Turner',\n",
-       " ' Alternative',\n",
-       " ' Eminem',\n",
-       " 'Silkworm',\n",
-       " ' Country',\n",
-       " ' Drake',\n",
-       " 'Bright Eyes',\n",
-       " ' Electronic',\n",
-       " ' Drake',\n",
-       " 'Imagine Dragons',\n",
-       " ' Country',\n",
-       " ' Eminem',\n",
-       " 'Aerosmith',\n",
-       " ' Classic Rock',\n",
-       " ' Drake',\n",
-       " 'Bruce Springsteen and the E Street Band',\n",
-       " ' Alternative',\n",
-       " ' Drake',\n",
-       " 'The Shins',\n",
-       " ' Classic Rock',\n",
-       " ' Drake',\n",
-       " 'The Ramones',\n",
-       " ' Indie',\n",
-       " ' Drake',\n",
-       " 'The Charlie Daniels Band',\n",
-       " ' Metal',\n",
-       " ' Eminem',\n",
-       " 'Bobby Vee & The Strangers',\n",
-       " ' Country',\n",
-       " ' Drake',\n",
-       " 'The Isley Brothers',\n",
-       " ' Metal',\n",
-       " ' Drake',\n",
-       " 'The Flaming Lips',\n",
-       " ' Alternative',\n",
-       " ' Drake',\n",
-       " 'The Decemberists',\n",
-       " ' Country',\n",
-       " ' Drake',\n",
-       " 'Hall & Oates',\n",
-       " ' Indie',\n",
-       " ' Drake',\n",
-       " 'Talking Heads',\n",
-       " ' Classic Rock',\n",
-       " ' Kevin Gates',\n",
-       " 'Hootie and the Blowfish',\n",
-       " ' Metal',\n",
-       " ' Eminem',\n",
-       " 'The Spill Canvas',\n",
-       " 'Indie',\n",
-       " ' Kevin Gates',\n",
-       " 'Johnny Cash and the Tennessee Three',\n",
-       " ' Latin',\n",
-       " ' Drake',\n",
-       " 'ZZ Top',\n",
-       " 'Country',\n",
-       " ' Eminem',\n",
-       " 'The Osmonds',\n",
-       " 'Indie',\n",
-       " ' Eminem',\n",
-       " 'Phish',\n",
-       " 'Country',\n",
-       " ' Drake',\n",
-       " 'Dave Matthews Band',\n",
-       " 'Indie',\n",
-       " ' Drake',\n",
-       " 'Nirvana',\n",
-       " 'Country',\n",
-       " ' Drake',\n",
-       " 'Asleep at the Wheel',\n",
-       " 'Country',\n",
-       " ' Drake',\n",
-       " 'Violent Femmes',\n",
-       " ' Indie',\n",
-       " ' Eminem',\n",
-       " ' Teenage Bottlerocket']"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "elements = html.xpath('//div/main/article/div/div/ul/li/strong/following-sibling::text()[1]')\n",
     "# ISSUE run into:\n",
@@ -332,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +269,7 @@
        " {'state': 'Wyoming', 'genre': 'Indie'}]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,6 +634,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For Use in State-Level Aggregation\n",
+    "import pickle\n",
+    "\n",
+    "with open('genre_state.pkl', 'wb') as f:\n",
+    "    pickle.dump(genre_by_state_df, f)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1064,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
