--- a/Genre_By_State&Selenium.ipynb
+++ b/Genre_By_State&Selenium.ipynb
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +643,7 @@
     "import pickle\n",
     "\n",
     "with open('genre_state.pkl', 'wb') as f:\n",
-    "    pickle.dump(genre_by_state_df, f)"
+    "    pickle.dump(genre_by_state, f)"
    ]
   },
   {
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +800,7 @@
     "    \n",
     "    # Scrape the top 10 songs\n",
     "    top_10_songs = []\n",
-    "    table = soup.find('table')  # Adjust this selector based on the actual HTML structure\n",
+    "    table = soup.find('table')  # table element selected\n",
     "    if table:\n",
     "        rows = table.find_all('tr')[1:11]  # Skip the header row and get the top 10 rows\n",
     "        for row in rows:\n",
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +983,7 @@
     "soup = BeautifulSoup(page_source, 'html.parser')\n",
     "\n",
     "# Scrape the top 10 songs\n",
-    "table = soup.find('table')  # Adjust this selector based on the actual HTML structure\n",
+    "table = soup.find('table') \n",
     "\n",
     "if table:\n",
     "    rows = table.find_all('tr')[1:11]  # Skip the header row and get the top 10 rows\n",
