--- a/Chartmetric_API.ipynb
+++ b/Chartmetric_API.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Usage of Chartmetric API:__ https://api.chartmetric.com/apidoc/\n",
+    "### __Utilizing Chartmetric API & Foundational Data (Max Vo):__ https://api.chartmetric.com/apidoc/\n",
     "\n",
     "Alternative:  \n",
     "      \n",
@@ -23,14 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import requests_cache\n",
     "from sys import exit\n",
-    "from pprint import pprint\n",
     "\n",
     "import lxml.html as lx\n",
     "import re"
@@ -47,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### NOT ACTUALLY GENERATING A TOKEN BUT HERE IS CODE THAT SHOWS HOW I WOULD OBTAIN THE TOKEN"
+    "#### Example Code for Token Generation in Private Script"
    ]
   },
   {
@@ -81,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +175,7 @@
        " 'iso3': 'USA'}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -245,13 +244,13 @@
        " {'city_name': 'Louisville', 'city_id': 6920, 'population': 1011696}]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Sorting By Population\n",
+    "# Sorting By Population (Extract ID information)\n",
     "sorted_cities = sorted(cityIDs['obj'], key=lambda x: x['population'], reverse=True)\n",
     "#\n",
     "top_50_cities = sorted_cities[:50]\n",
@@ -281,6 +280,23 @@
     "\n",
     "with open('top_50_cities_provinces.pkl', 'wb') as file:\n",
     "    pickle.dump(top_50_cities_provinces, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ALSO WANT LATITUDE AND LONGITUDE PAIRS FOR VISUALIZATION PURPOSES\n",
+    "import pickle\n",
+    "\n",
+    "top_50_cities_location = [\n",
+    "    {'city_name': city['city_name'], 'state': city['province'], 'latitude': city['latitude'], 'longitude': city['longitude']}\n",
+    "    for city in top_50_cities\n",
+    "]\n",
+    "with open('top_50_cities_location.pkl', 'wb') as file:\n",
+    "    pickle.dump(top_50_cities_location, file)"
    ]
   },
   {
